--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -16,6 +16,25 @@
 
 /* 1. AppNavbar.js */
 
+.app--background{
+  background-color: $dark-color;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: -999;
+}
+
+.container{
+  background-color: #F8F8F8;
+}
+
+@media(min-width: 576px){
+  .container{
+    border-radius: 70px;
+  }
+}
+
 /* MODAL */
 .show {
   opacity: 1;
@@ -82,7 +101,7 @@
 }
 
 .navbar--dark {
-  background: linear-gradient($light-color, $dark-color);
+  background: $dark-color;
   margin: 0 !important;
 }
 
@@ -268,7 +287,7 @@ li.media h4 {
 /* 6. Footer.js */
 
 .footer {
-  background: linear-gradient($light-color, $dark-color);
+  background: $dark-color;
   margin: 0 !important;
   width: 100%;
   height: 20vh;
@@ -288,6 +307,12 @@ li.media h4 {
 
 .social {
   color: white;
+  font-size: 32px;
+  transition: 0.5s;
+}
+.social:hover{
+  color: $light-color;
+  cursor: pointer;
 }
 
 
