--- a/mLingo/ClientApp/src/components/styles/css/variables.css
+++ b/mLingo/ClientApp/src/components/styles/css/variables.css
@@ -7,7 +7,7 @@
   color: white;
   width: 10vw;
   outline: none !important;
-  background: #4a69bd;
+  background: #000536;
   height: 60px;
   border-radius: 5px;
 }
