--- a/mLingo/ClientApp/src/components/styles/variables.scss
+++ b/mLingo/ClientApp/src/components/styles/variables.scss
@@ -38,6 +38,12 @@ $desktop-res: 992px;
   &:hover {
     color: $light-green;
   }
+
+  @media(max-width: $mobile-res){
+    &{
+      font-size: 16px !important;
+    }
+  }
 }
 
 @mixin outbutton($color) {
@@ -55,6 +61,12 @@ $desktop-res: 992px;
 
   &:hover {
     color: white;
+  }
+
+  @media(max-width: $mobile-res){
+    &{
+      font-size: 16px !important;
+    }
   }
 }
 
