--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -66,6 +66,14 @@
   align-items: center;
   flex-wrap: nowrap;
 
+
+  @media(min-width: $tablet-res){
+    & div{
+      margin: 0 0 0 18px ;
+    }
+  }
+
+
   input[type="text"]{
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #707070;
@@ -77,6 +85,12 @@
     @media(max-width: $tablet-res){
       height: 30px !important;
       font-size: 18px;
+    }
+
+    @media(min-width: $tablet-res){
+      & {
+        margin: 0 32px 0 0;
+      }
     }
 
     &:focus{
