--- a/mLingo/ClientApp/src/components/styles/css/Main.css
+++ b/mLingo/ClientApp/src/components/styles/css/Main.css
@@ -155,6 +155,12 @@
       flex-wrap: nowrap;
 }
 
+@media (min-width: 991px) {
+  .navbar__buttons div {
+    margin: 0 0 0 18px;
+  }
+}
+
 .navbar__buttons input[type="text"] {
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
@@ -168,6 +174,12 @@
   .navbar__buttons input[type="text"] {
     height: 30px !important;
     font-size: 18px;
+  }
+}
+
+@media (min-width: 991px) {
+  .navbar__buttons input[type="text"] {
+    margin: 0 32px 0 0;
   }
 }
 
