Working responsive navbar

--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -81,6 +81,7 @@
     height: 40px;
     max-width: 400px;
     font-size: 22px;
+    padding: 0 10px;
 
     @media(max-width: $tablet-res){
       height: 30px !important;
