--- a/mLingo/ClientApp/src/components/styles/css/Main.css
+++ b/mLingo/ClientApp/src/components/styles/css/Main.css
@@ -6,6 +6,32 @@ a:hover {
   text-decoration: none;
 }
 
+.green-button {
+  font-size: 16px;
+  font-weight: 400;
+  background-color: inherit;
+  border: 0;
+  color: #000536;
+  outline: none !important;
+  background: #B6EE1A;
+  padding: 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.green-button:hover {
+  color: #000536;
+  text-decoration: none !important;
+}
+
+@media (max-width: 576px) {
+  .green-button {
+    font-size: 16px !important;
+  }
+}
+
 .blue-button {
   font-size: 24px;
   font-weight: bold;
@@ -379,14 +405,16 @@ li.media h4 {
 }
 
 /* 5. Register.js */
-.registerForm2 input {
+.registerForm2 input[type="text"], .registerForm2 input[type="password"] {
   height: 40px;
   font-size: 18px;
+  border: 1px solid #707070;
+  border-radius: 10px;
 }
 
-.registerForm2 input:focus {
-  outline: none;
-  border: 0;
+.registerForm2 input[type="text"]:focus, .registerForm2 input[type="password"]:focus {
+  outline: none !important;
+  border: 1px solid #B6EE1A;
 }
 
 .registerForm2 {
@@ -394,8 +422,8 @@ li.media h4 {
 }
 
 .registerForm2 h1 {
-  font-size: 38px;
-  font-weight: 100;
+  font-size: 32px;
+  font-weight: 900;
 }
 
 .registerForm2 form {
@@ -404,6 +432,49 @@ li.media h4 {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.registerForm2 p {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.remember {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 14px;
+  color: #B6EE1A;
+  font-weight: 400 !important;
+}
+
+.remember a {
+  color: #B6EE1A;
+}
+
+.alreadyaccount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 14px;
+}
+
+.alreadyaccount a {
+  color: #000536;
+  -webkit-text-decoration: underline #000536;
+          text-decoration: underline #000536;
+  font-weight: bold;
 }
 
 /* 6. Footer.js */
